--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </head>
    <body>
    <header>
-   <h1>WelcomXPTO to HumanGov!</h1>
+   <h1>Welcome to HumanGov!</h1>
    <nav>
    <ul>
    <li><a href="#">Home</a></li>
