--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <!DOCTYPE html>
    <html>
    <head>
-   <title>My Website on GitHub</title>
+   <title>My Changed Website on GitHub</title>
    </head>
    <body>
    <header>
